--- a/.yamato/urp_terrain-osx_apple_silicon-metal.yml
+++ b/.yamato/urp_terrain-osx_apple_silicon-metal.yml
@@ -22,12 +22,11 @@ URP_Terrain_OSX_Apple_Silicon_Metal_Standalone_mono_Linear_trunk:
       -  chmod +x utr
       -  scp -i ~/.ssh/id_rsa_macmini -r $YAMATO_SOURCE_DIR bokken@$BOKKEN_DEVICE_IP:~/Graphics
       -  scp -i ~/.ssh/id_rsa_macmini ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP:~/.ssh/id_rsa_macmini
-      -  |5-
-              ssh -i ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP "export UPM_REGISTRY=https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates; ~/Graphics/utr  <UTR_FLAGS> "
-              UTR_RESULT=$?
-              mkdir -p TestProjects/UniversalGraphicsTest_Terrain/test-results/
-              scp -i ~/.ssh/id_rsa_macmini -r bokken@$BOKKEN_DEVICE_IP:/Users/bokken/Graphics/TestProjects/UniversalGraphicsTest_Terrain/test-results/ TestProjects/UniversalGraphicsTest_Terrain/test-results/
-              exit $UTR_RESULT
+      -  ssh -i ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP "export UPM_REGISTRY=https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates; ~/Graphics/utr <UTR_FLAGS> "
+      -  ssh -i ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP "UTR_RESULT=$?"
+      -  ssh -i ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP "mkdir -p TestProjects/UniversalGraphicsTest_Terrain/test-results/"
+      -  scp -i ~/.ssh/id_rsa_macmini -r bokken@$BOKKEN_DEVICE_IP:/Users/bokken/Graphics/TestProjects/UniversalGraphicsTest_Terrain/test-results/ TestProjects/UniversalGraphicsTest_Terrain/test-results/
+      -  ssh -i ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP "exit $UTR_RESULT"
     artifacts:
         logs:
             paths:
@@ -226,12 +225,11 @@ URP_Terrain_OSX_Apple_Silicon_Metal_Standalone_mono_Linear_CUSTOM-REVISION:
       -  chmod +x utr
       -  scp -i ~/.ssh/id_rsa_macmini -r $YAMATO_SOURCE_DIR bokken@$BOKKEN_DEVICE_IP:~/Graphics
       -  scp -i ~/.ssh/id_rsa_macmini ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP:~/.ssh/id_rsa_macmini
-      -  |5-
-              ssh -i ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP "export UPM_REGISTRY=https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates; ~/Graphics/utr  <UTR_FLAGS> "
-              UTR_RESULT=$?
-              mkdir -p TestProjects/UniversalGraphicsTest_Terrain/test-results/
-              scp -i ~/.ssh/id_rsa_macmini -r bokken@$BOKKEN_DEVICE_IP:/Users/bokken/Graphics/TestProjects/UniversalGraphicsTest_Terrain/test-results/ TestProjects/UniversalGraphicsTest_Terrain/test-results/
-              exit $UTR_RESULT
+      -  ssh -i ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP "export UPM_REGISTRY=https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates; ~/Graphics/utr <UTR_FLAGS> "
+      -  ssh -i ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP "UTR_RESULT=$?"
+      -  ssh -i ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP "mkdir -p TestProjects/UniversalGraphicsTest_Terrain/test-results/"
+      -  scp -i ~/.ssh/id_rsa_macmini -r bokken@$BOKKEN_DEVICE_IP:/Users/bokken/Graphics/TestProjects/UniversalGraphicsTest_Terrain/test-results/ TestProjects/UniversalGraphicsTest_Terrain/test-results/
+      -  ssh -i ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP "exit $UTR_RESULT"
     artifacts:
         logs:
             paths:
